--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * Linked List Lab
-** Name:
-** GitHub Username:
+** Name: Marcus Ng
+** GitHub Username: MarcusNg
 
 * Instructions
 For this lab, you are going add functionality to our ~List~ class so
